// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Component Menu component renders correctly with all props: HELLO 1`] = `
<Connect(Menu)
  categoriesProp={
    Array [
      Object {
        "category": "Boundaries & Labels",
        "layers": Array [
          Object {
            "Place Labels": Object {
              "category": "Place Labels",
              "count": 0,
              "layers": Array [
                Object {
                  "category": "Place Labels",
                  "id": "region-labels",
                  "label": "Region labels",
                  "layout": Object {
                    "text-field": "{region}",
                    "text-size": 14,
                    "text-transform": "uppercase",
                  },
                  "loaded": false,
                  "minZoom": 0,
                  "paint": Object {
                    "text-color": "#000",
                    "text-halo-blur": 1,
                    "text-halo-color": "#fff",
                    "text-halo-width": 1.3,
                  },
                  "source": Object {
                    "data": "data/ipc_regions_centroid.geojson",
                    "type": "geojson",
                  },
                  "type": "symbol",
                  "visible": false,
                },
                Object {
                  "category": "Place Labels",
                  "id": "district-labels",
                  "label": "District labels",
                  "layout": Object {
                    "text-field": "{name}",
                    "text-offset": Array [
                      0,
                      2,
                    ],
                    "text-size": 12,
                  },
                  "loaded": false,
                  "minZoom": 5.5,
                  "paint": Object {
                    "text-color": "#000",
                    "text-halo-blur": 1,
                    "text-halo-color": "#fff",
                    "text-halo-width": 1.3,
                  },
                  "source": Object {
                    "data": "data/ipc_distrtics_centroids.geojson",
                    "type": "geojson",
                  },
                  "type": "symbol",
                  "visible": false,
                },
                Object {
                  "category": "Place Labels",
                  "id": "banadir-labels",
                  "label": "Banadir labels",
                  "layout": Object {
                    "text-field": "{district_name}",
                    "text-offset": Array [
                      0,
                      2,
                    ],
                    "text-size": 12,
                  },
                  "loaded": false,
                  "location": Object {
                    "center": Object {
                      "lat": 2.047033986,
                      "lng": 45.33207821,
                    },
                    "zoom": 12.624128925301363,
                  },
                  "minZoom": 5.5,
                  "paint": Object {
                    "text-color": "#000",
                    "text-halo-blur": 1,
                    "text-halo-color": "#fff",
                    "text-halo-width": 1.3,
                  },
                  "source": Object {
                    "data": "data/banadir_districts.geojson",
                    "type": "geojson",
                  },
                  "type": "symbol",
                  "visible": false,
                },
              ],
              "parent": "Boundaries & Labels",
            },
          },
          Object {
            "Boundaries": Object {
              "category": "Boundaries",
              "count": 1,
              "layers": Array [
                Object {
                  "category": "Boundaries",
                  "filters": Object {},
                  "id": "regionboundaries",
                  "isChartMin": true,
                  "isLoading": false,
                  "label": "Regionboundaries",
                  "legendBottom": 40,
                  "loaded": true,
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 2,
                  },
                  "source": Object {
                    "layer": "som_adm_1-6k13xf",
                    "type": "vector",
                    "url": "mapbox://ona.bnc2rzsw",
                  },
                  "styleSpec": Object {
                    "id": "regionboundaries",
                    "layout": Object {},
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 2,
                    },
                    "source": Object {
                      "type": "vector",
                      "url": "mapbox://ona.bnc2rzsw",
                    },
                    "source-layer": "som_adm_1-6k13xf",
                    "type": "line",
                    "visible": true,
                  },
                  "type": "line",
                  "visible": true,
                },
                Object {
                  "category": "Boundaries",
                  "filters": Object {},
                  "id": "district-boundaries",
                  "isChartMin": true,
                  "isLoading": false,
                  "label": "Districts boundaries",
                  "legendBottom": 40,
                  "loaded": true,
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 1,
                  },
                  "source": Object {
                    "layer": "som_adm_2-0j5bly",
                    "type": "vector",
                    "url": "mapbox://ona.6gl2shzi",
                  },
                  "styleSpec": Object {
                    "id": "district-boundaries",
                    "layout": Object {},
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 1,
                    },
                    "source": Object {
                      "type": "vector",
                      "url": "mapbox://ona.6gl2shzi",
                    },
                    "source-layer": "som_adm_2-0j5bly",
                    "type": "line",
                    "visible": true,
                  },
                  "type": "line",
                  "visible": true,
                },
              ],
              "parent": "Boundaries & Labels",
            },
          },
        ],
      },
    ]
  }
  mapId="map-1"
  menuId="menu-1"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Menu
    LAYERS={
      Object {
        "groups": Object {
          "Boundaries": Array [
            Object {
              "Regionboundaries": Array [
                "regionboundaries",
              ],
            },
          ],
        },
      }
    }
    categories={
      Array [
        Object {
          "category": "Boundaries & Labels",
          "layers": Array [
            Object {
              "Place Labels": Object {
                "category": "Place Labels",
                "count": 0,
                "layers": Array [
                  Object {
                    "category": "Place Labels",
                    "id": "region-labels",
                    "label": "Region labels",
                    "layout": Object {
                      "text-field": "{region}",
                      "text-size": 14,
                      "text-transform": "uppercase",
                    },
                    "loaded": false,
                    "minZoom": 0,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_regions_centroid.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "district-labels",
                    "label": "District labels",
                    "layout": Object {
                      "text-field": "{name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_distrtics_centroids.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "banadir-labels",
                    "label": "Banadir labels",
                    "layout": Object {
                      "text-field": "{district_name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "location": Object {
                      "center": Object {
                        "lat": 2.047033986,
                        "lng": 45.33207821,
                      },
                      "zoom": 12.624128925301363,
                    },
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/banadir_districts.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
            Object {
              "Boundaries": Object {
                "category": "Boundaries",
                "count": 1,
                "layers": Array [
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "regionboundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Regionboundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 2,
                    },
                    "source": Object {
                      "layer": "som_adm_1-6k13xf",
                      "type": "vector",
                      "url": "mapbox://ona.bnc2rzsw",
                    },
                    "styleSpec": Object {
                      "id": "regionboundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 2,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.bnc2rzsw",
                      },
                      "source-layer": "som_adm_1-6k13xf",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "district-boundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Districts boundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 1,
                    },
                    "source": Object {
                      "layer": "som_adm_2-0j5bly",
                      "type": "vector",
                      "url": "mapbox://ona.6gl2shzi",
                    },
                    "styleSpec": Object {
                      "id": "district-boundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 1,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.6gl2shzi",
                      },
                      "source-layer": "som_adm_2-0j5bly",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
          ],
        },
      ]
    }
    categoriesProp={
      Array [
        Object {
          "category": "Boundaries & Labels",
          "layers": Array [
            Object {
              "Place Labels": Object {
                "category": "Place Labels",
                "count": 0,
                "layers": Array [
                  Object {
                    "category": "Place Labels",
                    "id": "region-labels",
                    "label": "Region labels",
                    "layout": Object {
                      "text-field": "{region}",
                      "text-size": 14,
                      "text-transform": "uppercase",
                    },
                    "loaded": false,
                    "minZoom": 0,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_regions_centroid.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "district-labels",
                    "label": "District labels",
                    "layout": Object {
                      "text-field": "{name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_distrtics_centroids.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "banadir-labels",
                    "label": "Banadir labels",
                    "layout": Object {
                      "text-field": "{district_name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "location": Object {
                      "center": Object {
                        "lat": 2.047033986,
                        "lng": 45.33207821,
                      },
                      "zoom": 12.624128925301363,
                    },
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/banadir_districts.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
            Object {
              "Boundaries": Object {
                "category": "Boundaries",
                "count": 1,
                "layers": Array [
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "regionboundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Regionboundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 2,
                    },
                    "source": Object {
                      "layer": "som_adm_1-6k13xf",
                      "type": "vector",
                      "url": "mapbox://ona.bnc2rzsw",
                    },
                    "styleSpec": Object {
                      "id": "regionboundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 2,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.bnc2rzsw",
                      },
                      "source-layer": "som_adm_1-6k13xf",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "district-boundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Districts boundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 1,
                    },
                    "source": Object {
                      "layer": "som_adm_2-0j5bly",
                      "type": "vector",
                      "url": "mapbox://ona.6gl2shzi",
                    },
                    "styleSpec": Object {
                      "id": "district-boundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 1,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.6gl2shzi",
                      },
                      "source-layer": "som_adm_2-0j5bly",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
          ],
        },
      ]
    }
    currentRegion="reg2"
    dispatch={[Function]}
    loaded={true}
    mapId="map-1"
    mapTargetId=""
    menuId="sector-menu-1"
    openCategories={
      Array [
        "Boundaries",
      ]
    }
    preparedLayers={
      Object {
        "Regionboundaries": Object {
          "category": "Boundaries",
          "filters": Object {},
          "id": "regionboundaries",
          "isChartMin": true,
          "isLoading": false,
          "label": "Regionboundaries",
          "legendBottom": 40,
          "loaded": true,
          "paint": Object {
            "line-color": "#444",
            "line-opacity": 0.6,
            "line-width": 2,
          },
          "source": Object {
            "layer": "som_adm_1-6k13xf",
            "type": "vector",
            "url": "mapbox://ona.bnc2rzsw",
          },
          "styleSpec": Object {
            "id": "regionboundaries",
            "layout": Object {},
            "paint": Object {
              "line-color": "#444",
              "line-opacity": 0.6,
              "line-width": 2,
            },
            "source": Object {
              "type": "vector",
              "url": "mapbox://ona.bnc2rzsw",
            },
            "source-layer": "som_adm_1-6k13xf",
            "type": "line",
            "visible": true,
          },
          "type": "line",
          "visible": true,
        },
      }
    }
    regions={
      Array [
        Object {
          "current": false,
          "name": "reg1",
        },
        Object {
          "current": true,
          "name": "reg2",
        },
      ]
    }
    showMap={false}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <div>
      <div>
        <div
          className="menu-wrapper top"
          id="map-1-menu-wrapper"
          onScroll={[Function]}
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <a
            className="open-btn"
            onClick={[Function]}
            style={
              Object {
                "display": "block",
              }
            }
          >
            <span
              className="glyphicon glyphicon-menu-hamburger"
            />
          </a>
          <div
            className="sectors-menu"
            id="map-1-menu"
            style={
              Object {
                "display": "none",
              }
            }
          >
            <a
              className="close-btn"
              onClick={[Function]}
            >
              <span
                className="glyphicon glyphicon-remove"
              />
            </a>
            <ul
              className="sectors"
            >
              <li
                className="sector"
              >
                <a
                  onClick={[Function]}
                >
                  Regions
                  <span
                    className="caret"
                  />
                </a>
                <ul
                  className="layers"
                >
                  <li
                    className="region map-1"
                    key="reg1"
                  >
                    <input
                      checked={false}
                      id="reg1"
                      key="reg1"
                      name="region"
                      onChange={[Function]}
                      type="radio"
                      value="reg1"
                    />
                    <label
                      htmlFor="reg1"
                    >
                      reg1
                    </label>
                  </li>
                  <li
                    className="region map-1"
                    key="reg2"
                  >
                    <input
                      checked={true}
                      id="reg2"
                      key="reg2"
                      name="region"
                      onChange={[Function]}
                      type="radio"
                      value="reg2"
                    />
                    <label
                      htmlFor="reg2"
                    >
                      reg2
                    </label>
                  </li>
                </ul>
              </li>
              <li
                className="sector"
                key="0"
              >
                <a
                  className="sector"
                  onClick={[Function]}
                >
                  Boundaries & Labels
                  <span
                    className="category glyphicon glyphicon-chevron-right"
                  />
                   
                    
                </a>
                <ul />
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </Menu>
</Connect(Menu)>
`;

exports[`Menu Component Menu component renders correctly with all props: LAYERS 1`] = `
<Connect(Menu)
  categoriesProp={
    Array [
      Object {
        "category": "Boundaries & Labels",
        "layers": Array [
          Object {
            "Place Labels": Object {
              "category": "Place Labels",
              "count": 0,
              "layers": Array [
                Object {
                  "category": "Place Labels",
                  "id": "region-labels",
                  "label": "Region labels",
                  "layout": Object {
                    "text-field": "{region}",
                    "text-size": 14,
                    "text-transform": "uppercase",
                  },
                  "loaded": false,
                  "minZoom": 0,
                  "paint": Object {
                    "text-color": "#000",
                    "text-halo-blur": 1,
                    "text-halo-color": "#fff",
                    "text-halo-width": 1.3,
                  },
                  "source": Object {
                    "data": "data/ipc_regions_centroid.geojson",
                    "type": "geojson",
                  },
                  "type": "symbol",
                  "visible": false,
                },
                Object {
                  "category": "Place Labels",
                  "id": "district-labels",
                  "label": "District labels",
                  "layout": Object {
                    "text-field": "{name}",
                    "text-offset": Array [
                      0,
                      2,
                    ],
                    "text-size": 12,
                  },
                  "loaded": false,
                  "minZoom": 5.5,
                  "paint": Object {
                    "text-color": "#000",
                    "text-halo-blur": 1,
                    "text-halo-color": "#fff",
                    "text-halo-width": 1.3,
                  },
                  "source": Object {
                    "data": "data/ipc_distrtics_centroids.geojson",
                    "type": "geojson",
                  },
                  "type": "symbol",
                  "visible": false,
                },
                Object {
                  "category": "Place Labels",
                  "id": "banadir-labels",
                  "label": "Banadir labels",
                  "layout": Object {
                    "text-field": "{district_name}",
                    "text-offset": Array [
                      0,
                      2,
                    ],
                    "text-size": 12,
                  },
                  "loaded": false,
                  "location": Object {
                    "center": Object {
                      "lat": 2.047033986,
                      "lng": 45.33207821,
                    },
                    "zoom": 12.624128925301363,
                  },
                  "minZoom": 5.5,
                  "paint": Object {
                    "text-color": "#000",
                    "text-halo-blur": 1,
                    "text-halo-color": "#fff",
                    "text-halo-width": 1.3,
                  },
                  "source": Object {
                    "data": "data/banadir_districts.geojson",
                    "type": "geojson",
                  },
                  "type": "symbol",
                  "visible": false,
                },
              ],
              "parent": "Boundaries & Labels",
            },
          },
          Object {
            "Boundaries": Object {
              "category": "Boundaries",
              "count": 1,
              "layers": Array [
                Object {
                  "category": "Boundaries",
                  "filters": Object {},
                  "id": "regionboundaries",
                  "isChartMin": true,
                  "isLoading": false,
                  "label": "Regionboundaries",
                  "legendBottom": 40,
                  "loaded": true,
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 2,
                  },
                  "source": Object {
                    "layer": "som_adm_1-6k13xf",
                    "type": "vector",
                    "url": "mapbox://ona.bnc2rzsw",
                  },
                  "styleSpec": Object {
                    "id": "regionboundaries",
                    "layout": Object {},
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 2,
                    },
                    "source": Object {
                      "type": "vector",
                      "url": "mapbox://ona.bnc2rzsw",
                    },
                    "source-layer": "som_adm_1-6k13xf",
                    "type": "line",
                    "visible": true,
                  },
                  "type": "line",
                  "visible": true,
                },
                Object {
                  "category": "Boundaries",
                  "filters": Object {},
                  "id": "district-boundaries",
                  "isChartMin": true,
                  "isLoading": false,
                  "label": "Districts boundaries",
                  "legendBottom": 40,
                  "loaded": true,
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 1,
                  },
                  "source": Object {
                    "layer": "som_adm_2-0j5bly",
                    "type": "vector",
                    "url": "mapbox://ona.6gl2shzi",
                  },
                  "styleSpec": Object {
                    "id": "district-boundaries",
                    "layout": Object {},
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 1,
                    },
                    "source": Object {
                      "type": "vector",
                      "url": "mapbox://ona.6gl2shzi",
                    },
                    "source-layer": "som_adm_2-0j5bly",
                    "type": "line",
                    "visible": true,
                  },
                  "type": "line",
                  "visible": true,
                },
              ],
              "parent": "Boundaries & Labels",
            },
          },
        ],
      },
    ]
  }
  mapId="map-1"
  menuId="menu-1"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Menu
    LAYERS={
      Object {
        "groups": Object {
          "Boundaries": Array [
            Object {
              "Regionboundaries": Array [
                "regionboundaries",
              ],
            },
          ],
        },
      }
    }
    categories={
      Array [
        Object {
          "category": "Boundaries & Labels",
          "layers": Array [
            Object {
              "Place Labels": Object {
                "category": "Place Labels",
                "count": 0,
                "layers": Array [
                  Object {
                    "category": "Place Labels",
                    "id": "region-labels",
                    "label": "Region labels",
                    "layout": Object {
                      "text-field": "{region}",
                      "text-size": 14,
                      "text-transform": "uppercase",
                    },
                    "loaded": false,
                    "minZoom": 0,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_regions_centroid.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "district-labels",
                    "label": "District labels",
                    "layout": Object {
                      "text-field": "{name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_distrtics_centroids.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "banadir-labels",
                    "label": "Banadir labels",
                    "layout": Object {
                      "text-field": "{district_name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "location": Object {
                      "center": Object {
                        "lat": 2.047033986,
                        "lng": 45.33207821,
                      },
                      "zoom": 12.624128925301363,
                    },
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/banadir_districts.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
            Object {
              "Boundaries": Object {
                "category": "Boundaries",
                "count": 1,
                "layers": Array [
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "regionboundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Regionboundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 2,
                    },
                    "source": Object {
                      "layer": "som_adm_1-6k13xf",
                      "type": "vector",
                      "url": "mapbox://ona.bnc2rzsw",
                    },
                    "styleSpec": Object {
                      "id": "regionboundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 2,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.bnc2rzsw",
                      },
                      "source-layer": "som_adm_1-6k13xf",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "district-boundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Districts boundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 1,
                    },
                    "source": Object {
                      "layer": "som_adm_2-0j5bly",
                      "type": "vector",
                      "url": "mapbox://ona.6gl2shzi",
                    },
                    "styleSpec": Object {
                      "id": "district-boundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 1,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.6gl2shzi",
                      },
                      "source-layer": "som_adm_2-0j5bly",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
          ],
        },
      ]
    }
    categoriesProp={
      Array [
        Object {
          "category": "Boundaries & Labels",
          "layers": Array [
            Object {
              "Place Labels": Object {
                "category": "Place Labels",
                "count": 0,
                "layers": Array [
                  Object {
                    "category": "Place Labels",
                    "id": "region-labels",
                    "label": "Region labels",
                    "layout": Object {
                      "text-field": "{region}",
                      "text-size": 14,
                      "text-transform": "uppercase",
                    },
                    "loaded": false,
                    "minZoom": 0,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_regions_centroid.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "district-labels",
                    "label": "District labels",
                    "layout": Object {
                      "text-field": "{name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/ipc_distrtics_centroids.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                  Object {
                    "category": "Place Labels",
                    "id": "banadir-labels",
                    "label": "Banadir labels",
                    "layout": Object {
                      "text-field": "{district_name}",
                      "text-offset": Array [
                        0,
                        2,
                      ],
                      "text-size": 12,
                    },
                    "loaded": false,
                    "location": Object {
                      "center": Object {
                        "lat": 2.047033986,
                        "lng": 45.33207821,
                      },
                      "zoom": 12.624128925301363,
                    },
                    "minZoom": 5.5,
                    "paint": Object {
                      "text-color": "#000",
                      "text-halo-blur": 1,
                      "text-halo-color": "#fff",
                      "text-halo-width": 1.3,
                    },
                    "source": Object {
                      "data": "data/banadir_districts.geojson",
                      "type": "geojson",
                    },
                    "type": "symbol",
                    "visible": false,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
            Object {
              "Boundaries": Object {
                "category": "Boundaries",
                "count": 1,
                "layers": Array [
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "regionboundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Regionboundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 2,
                    },
                    "source": Object {
                      "layer": "som_adm_1-6k13xf",
                      "type": "vector",
                      "url": "mapbox://ona.bnc2rzsw",
                    },
                    "styleSpec": Object {
                      "id": "regionboundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 2,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.bnc2rzsw",
                      },
                      "source-layer": "som_adm_1-6k13xf",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                  Object {
                    "category": "Boundaries",
                    "filters": Object {},
                    "id": "district-boundaries",
                    "isChartMin": true,
                    "isLoading": false,
                    "label": "Districts boundaries",
                    "legendBottom": 40,
                    "loaded": true,
                    "paint": Object {
                      "line-color": "#444",
                      "line-opacity": 0.6,
                      "line-width": 1,
                    },
                    "source": Object {
                      "layer": "som_adm_2-0j5bly",
                      "type": "vector",
                      "url": "mapbox://ona.6gl2shzi",
                    },
                    "styleSpec": Object {
                      "id": "district-boundaries",
                      "layout": Object {},
                      "paint": Object {
                        "line-color": "#444",
                        "line-opacity": 0.6,
                        "line-width": 1,
                      },
                      "source": Object {
                        "type": "vector",
                        "url": "mapbox://ona.6gl2shzi",
                      },
                      "source-layer": "som_adm_2-0j5bly",
                      "type": "line",
                      "visible": true,
                    },
                    "type": "line",
                    "visible": true,
                  },
                ],
                "parent": "Boundaries & Labels",
              },
            },
          ],
        },
      ]
    }
    currentRegion="reg2"
    dispatch={[Function]}
    loaded={true}
    mapId="map-1"
    mapTargetId=""
    menuId="sector-menu-1"
    openCategories={
      Array [
        "Boundaries",
      ]
    }
    preparedLayers={
      Object {
        "Regionboundaries": Object {
          "category": "Boundaries",
          "filters": Object {},
          "id": "regionboundaries",
          "isChartMin": true,
          "isLoading": false,
          "label": "Regionboundaries",
          "legendBottom": 40,
          "loaded": true,
          "paint": Object {
            "line-color": "#444",
            "line-opacity": 0.6,
            "line-width": 2,
          },
          "source": Object {
            "layer": "som_adm_1-6k13xf",
            "type": "vector",
            "url": "mapbox://ona.bnc2rzsw",
          },
          "styleSpec": Object {
            "id": "regionboundaries",
            "layout": Object {},
            "paint": Object {
              "line-color": "#444",
              "line-opacity": 0.6,
              "line-width": 2,
            },
            "source": Object {
              "type": "vector",
              "url": "mapbox://ona.bnc2rzsw",
            },
            "source-layer": "som_adm_1-6k13xf",
            "type": "line",
            "visible": true,
          },
          "type": "line",
          "visible": true,
        },
      }
    }
    regions={
      Array [
        Object {
          "current": false,
          "name": "reg1",
        },
        Object {
          "current": true,
          "name": "reg2",
        },
      ]
    }
    showMap={false}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <div>
      <div>
        <div
          className="menu-wrapper top"
          id="map-1-menu-wrapper"
          onScroll={[Function]}
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <a
            className="open-btn"
            onClick={[Function]}
            style={
              Object {
                "display": "block",
              }
            }
          >
            <span
              className="glyphicon glyphicon-menu-hamburger"
            />
          </a>
          <div
            className="sectors-menu"
            id="map-1-menu"
            style={
              Object {
                "display": "none",
              }
            }
          >
            <a
              className="close-btn"
              onClick={[Function]}
            >
              <span
                className="glyphicon glyphicon-remove"
              />
            </a>
            <ul
              className="sectors"
            >
              <li
                className="sector"
              >
                <a
                  onClick={[Function]}
                >
                  Regions
                  <span
                    className="caret"
                  />
                </a>
                <ul
                  className="layers"
                >
                  <li
                    className="region map-1"
                    key="reg1"
                  >
                    <input
                      checked={false}
                      id="reg1"
                      key="reg1"
                      name="region"
                      onChange={[Function]}
                      type="radio"
                      value="reg1"
                    />
                    <label
                      htmlFor="reg1"
                    >
                      reg1
                    </label>
                  </li>
                  <li
                    className="region map-1"
                    key="reg2"
                  >
                    <input
                      checked={true}
                      id="reg2"
                      key="reg2"
                      name="region"
                      onChange={[Function]}
                      type="radio"
                      value="reg2"
                    />
                    <label
                      htmlFor="reg2"
                    >
                      reg2
                    </label>
                  </li>
                </ul>
              </li>
              <li
                className="sector"
                key="0"
              >
                <a
                  className="sector"
                  onClick={[Function]}
                >
                  Boundaries & Labels
                  <span
                    className="category glyphicon glyphicon-chevron-right"
                  />
                   
                    
                </a>
                <ul />
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </Menu>
</Connect(Menu)>
`;

exports[`Menu Component Menu component renders correctly with all props: Menu props 1`] = `
Object {
  "AUTH": undefined,
  "LAYERS": Object {
    "groups": Object {
      "Boundaries": Array [
        Object {
          "Regionboundaries": Array [
            "regionboundaries",
          ],
        },
      ],
    },
  },
  "categories": Array [
    Object {
      "category": "Boundaries & Labels",
      "layers": Array [
        Object {
          "Place Labels": Object {
            "category": "Place Labels",
            "count": 0,
            "layers": Array [
              Object {
                "category": "Place Labels",
                "id": "region-labels",
                "label": "Region labels",
                "layout": Object {
                  "text-field": "{region}",
                  "text-size": 14,
                  "text-transform": "uppercase",
                },
                "loaded": false,
                "minZoom": 0,
                "paint": Object {
                  "text-color": "#000",
                  "text-halo-blur": 1,
                  "text-halo-color": "#fff",
                  "text-halo-width": 1.3,
                },
                "source": Object {
                  "data": "data/ipc_regions_centroid.geojson",
                  "type": "geojson",
                },
                "type": "symbol",
                "visible": false,
              },
              Object {
                "category": "Place Labels",
                "id": "district-labels",
                "label": "District labels",
                "layout": Object {
                  "text-field": "{name}",
                  "text-offset": Array [
                    0,
                    2,
                  ],
                  "text-size": 12,
                },
                "loaded": false,
                "minZoom": 5.5,
                "paint": Object {
                  "text-color": "#000",
                  "text-halo-blur": 1,
                  "text-halo-color": "#fff",
                  "text-halo-width": 1.3,
                },
                "source": Object {
                  "data": "data/ipc_distrtics_centroids.geojson",
                  "type": "geojson",
                },
                "type": "symbol",
                "visible": false,
              },
              Object {
                "category": "Place Labels",
                "id": "banadir-labels",
                "label": "Banadir labels",
                "layout": Object {
                  "text-field": "{district_name}",
                  "text-offset": Array [
                    0,
                    2,
                  ],
                  "text-size": 12,
                },
                "loaded": false,
                "location": Object {
                  "center": Object {
                    "lat": 2.047033986,
                    "lng": 45.33207821,
                  },
                  "zoom": 12.624128925301363,
                },
                "minZoom": 5.5,
                "paint": Object {
                  "text-color": "#000",
                  "text-halo-blur": 1,
                  "text-halo-color": "#fff",
                  "text-halo-width": 1.3,
                },
                "source": Object {
                  "data": "data/banadir_districts.geojson",
                  "type": "geojson",
                },
                "type": "symbol",
                "visible": false,
              },
            ],
            "parent": "Boundaries & Labels",
          },
        },
        Object {
          "Boundaries": Object {
            "category": "Boundaries",
            "count": 1,
            "layers": Array [
              Object {
                "category": "Boundaries",
                "filters": Object {},
                "id": "regionboundaries",
                "isChartMin": true,
                "isLoading": false,
                "label": "Regionboundaries",
                "legendBottom": 40,
                "loaded": true,
                "paint": Object {
                  "line-color": "#444",
                  "line-opacity": 0.6,
                  "line-width": 2,
                },
                "source": Object {
                  "layer": "som_adm_1-6k13xf",
                  "type": "vector",
                  "url": "mapbox://ona.bnc2rzsw",
                },
                "styleSpec": Object {
                  "id": "regionboundaries",
                  "layout": Object {},
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 2,
                  },
                  "source": Object {
                    "type": "vector",
                    "url": "mapbox://ona.bnc2rzsw",
                  },
                  "source-layer": "som_adm_1-6k13xf",
                  "type": "line",
                  "visible": true,
                },
                "type": "line",
                "visible": true,
              },
              Object {
                "category": "Boundaries",
                "filters": Object {},
                "id": "district-boundaries",
                "isChartMin": true,
                "isLoading": false,
                "label": "Districts boundaries",
                "legendBottom": 40,
                "loaded": true,
                "paint": Object {
                  "line-color": "#444",
                  "line-opacity": 0.6,
                  "line-width": 1,
                },
                "source": Object {
                  "layer": "som_adm_2-0j5bly",
                  "type": "vector",
                  "url": "mapbox://ona.6gl2shzi",
                },
                "styleSpec": Object {
                  "id": "district-boundaries",
                  "layout": Object {},
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 1,
                  },
                  "source": Object {
                    "type": "vector",
                    "url": "mapbox://ona.6gl2shzi",
                  },
                  "source-layer": "som_adm_2-0j5bly",
                  "type": "line",
                  "visible": true,
                },
                "type": "line",
                "visible": true,
              },
            ],
            "parent": "Boundaries & Labels",
          },
        },
      ],
    },
  ],
  "categoriesProp": Array [
    Object {
      "category": "Boundaries & Labels",
      "layers": Array [
        Object {
          "Place Labels": Object {
            "category": "Place Labels",
            "count": 0,
            "layers": Array [
              Object {
                "category": "Place Labels",
                "id": "region-labels",
                "label": "Region labels",
                "layout": Object {
                  "text-field": "{region}",
                  "text-size": 14,
                  "text-transform": "uppercase",
                },
                "loaded": false,
                "minZoom": 0,
                "paint": Object {
                  "text-color": "#000",
                  "text-halo-blur": 1,
                  "text-halo-color": "#fff",
                  "text-halo-width": 1.3,
                },
                "source": Object {
                  "data": "data/ipc_regions_centroid.geojson",
                  "type": "geojson",
                },
                "type": "symbol",
                "visible": false,
              },
              Object {
                "category": "Place Labels",
                "id": "district-labels",
                "label": "District labels",
                "layout": Object {
                  "text-field": "{name}",
                  "text-offset": Array [
                    0,
                    2,
                  ],
                  "text-size": 12,
                },
                "loaded": false,
                "minZoom": 5.5,
                "paint": Object {
                  "text-color": "#000",
                  "text-halo-blur": 1,
                  "text-halo-color": "#fff",
                  "text-halo-width": 1.3,
                },
                "source": Object {
                  "data": "data/ipc_distrtics_centroids.geojson",
                  "type": "geojson",
                },
                "type": "symbol",
                "visible": false,
              },
              Object {
                "category": "Place Labels",
                "id": "banadir-labels",
                "label": "Banadir labels",
                "layout": Object {
                  "text-field": "{district_name}",
                  "text-offset": Array [
                    0,
                    2,
                  ],
                  "text-size": 12,
                },
                "loaded": false,
                "location": Object {
                  "center": Object {
                    "lat": 2.047033986,
                    "lng": 45.33207821,
                  },
                  "zoom": 12.624128925301363,
                },
                "minZoom": 5.5,
                "paint": Object {
                  "text-color": "#000",
                  "text-halo-blur": 1,
                  "text-halo-color": "#fff",
                  "text-halo-width": 1.3,
                },
                "source": Object {
                  "data": "data/banadir_districts.geojson",
                  "type": "geojson",
                },
                "type": "symbol",
                "visible": false,
              },
            ],
            "parent": "Boundaries & Labels",
          },
        },
        Object {
          "Boundaries": Object {
            "category": "Boundaries",
            "count": 1,
            "layers": Array [
              Object {
                "category": "Boundaries",
                "filters": Object {},
                "id": "regionboundaries",
                "isChartMin": true,
                "isLoading": false,
                "label": "Regionboundaries",
                "legendBottom": 40,
                "loaded": true,
                "paint": Object {
                  "line-color": "#444",
                  "line-opacity": 0.6,
                  "line-width": 2,
                },
                "source": Object {
                  "layer": "som_adm_1-6k13xf",
                  "type": "vector",
                  "url": "mapbox://ona.bnc2rzsw",
                },
                "styleSpec": Object {
                  "id": "regionboundaries",
                  "layout": Object {},
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 2,
                  },
                  "source": Object {
                    "type": "vector",
                    "url": "mapbox://ona.bnc2rzsw",
                  },
                  "source-layer": "som_adm_1-6k13xf",
                  "type": "line",
                  "visible": true,
                },
                "type": "line",
                "visible": true,
              },
              Object {
                "category": "Boundaries",
                "filters": Object {},
                "id": "district-boundaries",
                "isChartMin": true,
                "isLoading": false,
                "label": "Districts boundaries",
                "legendBottom": 40,
                "loaded": true,
                "paint": Object {
                  "line-color": "#444",
                  "line-opacity": 0.6,
                  "line-width": 1,
                },
                "source": Object {
                  "layer": "som_adm_2-0j5bly",
                  "type": "vector",
                  "url": "mapbox://ona.6gl2shzi",
                },
                "styleSpec": Object {
                  "id": "district-boundaries",
                  "layout": Object {},
                  "paint": Object {
                    "line-color": "#444",
                    "line-opacity": 0.6,
                    "line-width": 1,
                  },
                  "source": Object {
                    "type": "vector",
                    "url": "mapbox://ona.6gl2shzi",
                  },
                  "source-layer": "som_adm_2-0j5bly",
                  "type": "line",
                  "visible": true,
                },
                "type": "line",
                "visible": true,
              },
            ],
            "parent": "Boundaries & Labels",
          },
        },
      ],
    },
  ],
  "currentRegion": "reg2",
  "dispatch": [Function],
  "hyperLink": undefined,
  "infoText": undefined,
  "legendInfoText": undefined,
  "loaded": true,
  "mapId": "map-1",
  "mapTargetId": "",
  "menuId": "sector-menu-1",
  "menuIsOpen": undefined,
  "menuScroll": undefined,
  "noLayerText": undefined,
  "openCategories": Array [
    "Boundaries",
  ],
  "preparedLayers": Object {
    "Regionboundaries": Object {
      "category": "Boundaries",
      "filters": Object {},
      "id": "regionboundaries",
      "isChartMin": true,
      "isLoading": false,
      "label": "Regionboundaries",
      "legendBottom": 40,
      "loaded": true,
      "paint": Object {
        "line-color": "#444",
        "line-opacity": 0.6,
        "line-width": 2,
      },
      "source": Object {
        "layer": "som_adm_1-6k13xf",
        "type": "vector",
        "url": "mapbox://ona.bnc2rzsw",
      },
      "styleSpec": Object {
        "id": "regionboundaries",
        "layout": Object {},
        "paint": Object {
          "line-color": "#444",
          "line-opacity": 0.6,
          "line-width": 2,
        },
        "source": Object {
          "type": "vector",
          "url": "mapbox://ona.bnc2rzsw",
        },
        "source-layer": "som_adm_1-6k13xf",
        "type": "line",
        "visible": true,
      },
      "type": "line",
      "visible": true,
    },
  },
  "regions": Array [
    Object {
      "current": false,
      "name": "reg1",
    },
    Object {
      "current": true,
      "name": "reg2",
    },
  ],
  "showMap": false,
  "showSearchBar": undefined,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "storeSubscription": Subscription {
    "listeners": Object {
      "clear": [Function],
      "get": [Function],
      "notify": [Function],
      "subscribe": [Function],
    },
    "onStateChange": [Function],
    "parentSub": undefined,
    "store": Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    },
    "unsubscribe": [Function],
  },
}
`;

exports[`Menu Component Renders correctly when search bar is active: search bar on 1`] = `
Object {
  "APP": Object {
    "appColor": "red",
    "loaded": true,
    "searchBar": true,
  },
  "LOC": undefined,
  "appColor": "red",
  "dispatch": [Function],
  "handleSearchClick": [Function],
  "handleSearchInput": [Function],
  "mapId": "map-1",
  "openCategoryForLayers": [Function],
  "preparedLayers": Object {
    "Regionboundaries": Object {
      "category": "Boundaries",
      "filters": Object {},
      "id": "regionboundaries",
      "isChartMin": true,
      "isLoading": false,
      "label": "Regionboundaries",
      "legendBottom": 40,
      "loaded": true,
      "paint": Object {
        "line-color": "#444",
        "line-opacity": 0.6,
        "line-width": 2,
      },
      "source": Object {
        "layer": "som_adm_1-6k13xf",
        "type": "vector",
        "url": "mapbox://ona.bnc2rzsw",
      },
      "styleSpec": Object {
        "id": "regionboundaries",
        "layout": Object {},
        "paint": Object {
          "line-color": "#444",
          "line-opacity": 0.6,
          "line-width": 2,
        },
        "source": Object {
          "type": "vector",
          "url": "mapbox://ona.bnc2rzsw",
        },
        "source-layer": "som_adm_1-6k13xf",
        "type": "line",
        "visible": true,
      },
      "type": "line",
      "visible": true,
    },
  },
  "searchBarColor": undefined,
  "searchResultClick": [Function],
  "searching": false,
}
`;
